# moore-agents

./: agent-moore.cabal
apps/demo/: Main.hs
src/: AgentMoore.hs  Machines.hs
src/Machines/: Mealy.hs  MealyM.hs
