cabal-version:      2.4
name:               agent-moore
version:            0.1.0.0
-- description:
bug-reports:        https://github.com/solomon-b/co-prompt/agent-moore
author:             Solomon Bothwell & chessai
maintainer:         ssbothwell@gmail.com
category:           Machines, Dynamical Systems, LLMs, DAGs
extra-source-files: README.md

--------------------------------------------------------------------------------

common common-config
  build-depends:
    base >= 4.12 && < 5,

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wno-star-is-type

  default-language:
    Haskell2010

  default-extensions:
    DeriveFunctor
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase

--------------------------------------------------------------------------------

library
  import:
    common-config

  exposed-modules:
    AgentMoore
    Graph
    Machines
    Machines.Mealy
    Machines.MealyM
    Machines.Moore

  build-depends:
    containers,
    dot,
    profunctors,
    monoidal-functors >= 0.2.3.0,
    mtl,
    primitive,
    text,
    these

  hs-source-dirs: src

--------------------------------------------------------------------------------

executable demo
  import:
    common-config

  main-is:
    Main.hs

  build-depends:
    agent-moore,
    containers,
    dot,
    text

  hs-source-dirs:   apps/demo
